opam-version: "2.0"
version: "0.1"
synopsis: "order-xfce-i3 is a small utility that allow you to keep a synchronized order between i3 tabs and the xfce pannel window buttons plugin."
description: ""
maintainer: "Emile Trotignon emile.trotignon@gmail.com"
authors: "Emile Trotignon emile.trotignon@gmail.com"
license: "MIT"
homepage: "https://github.com/EmileTrotignon/order-xfce-i3"
bug-reports: "https://github.com/EmileTrotignon/order-xfce-i3/issues"
dev-repo: "git+https://github.com/EmileTrotignon/order-xfce-i3.git"
depends: [ 
    "ocaml" {>= "4.07.0"}
    "dune" {>= "2.5.0"} 
    "lwt" 
    "i3ipc" {>= "v0.3"}
    ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]